handle error validations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     @if (showFirstForm) {
     <app-personal-information
       (emitFormData)="handlePersonalInfoSubmit($event)"
+      (isFirstForm)="showFirstForm = $event"
       [showFirstForm]="showFirstForm"
     ></app-personal-information>
     } @if (!showFirstForm) {
