--- a/src/app/components/health-ambitions/health-ambitions.component.html
+++ b/src/app/components/health-ambitions/health-ambitions.component.html
@@ -71,7 +71,7 @@
           physicalDiseases.touched
       }"
     >
-      <option selected disabled value="">هل تعاني من أي أمراض جسدية؟</option>
+      <option selected disabled>هل تعاني من أي أمراض جسدية؟</option>
       <option value="true">نعم اعاني</option>
       <option value="false">لا اعاني</option>
     </select>
@@ -329,3 +329,4 @@
     <button class="btn btn-dark">ارسال</button>
   </div>
 </form>
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
